# ceed_parser

./: .clang-format  .clang-tidy  .cppcheck  .gitignore  CMakeLists.txt  Makefile  README.md  RUST_MIGRATION.md  build.sh  cmake_uninstall.cmake.in  download_wordlists.sh  fetch_wordlists.py  get_wordlists.sh  organize_project.sh  run_tests.sh
.cursor/rules/: tdd.mdc
.github/workflows/: ci.yml
c_seed_parser/: CMakeLists.txt  LICENSE  README.md  build.sh
c_seed_parser/include/: cache.h  memory_pool.h  mnemonic.h  seed_parser.h  simd_utils.h  thread_pool.h  unity.h  wallet.h
c_seed_parser/src/: main.c  memory_pool.c  mnemonic.c  seed_parser.c  sha3.c  wallet.c
c_seed_parser/test/: test_main.c  test_mnemonic.c
data/: monero_chinese_simplified.txt  monero_dutch.txt  monero_english.txt  monero_esperanto.txt  monero_french.txt  monero_german.txt  monero_italian.txt  monero_japanese.txt  monero_lojban.txt  monero_portuguese.txt  monero_russian.txt  monero_spanish.txt
include/: apple_silicon_utils.h  cache.h  logger.h  memory_pool.h  mnemonic.h  seed_parser.h  seed_parser_optimized.h  sha3.h  simd_utils.h  thread_pool.h  unity.h  wallet.h
src/: benchmark.c  cache.c  main.c  memory_pool.c  mnemonic.c  seed_parser.c  seed_parser_optimized.c  sha3.c  simd_utils.c  thread_pool.c  wallet.c
test/: test_main.c  test_memory.c  test_mnemonic.c  test_parser.c  test_wallet.c  unity.c
